аfixed minor mistakes 2.0